--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "async-af": "^7.0.21",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "ejs": "^2.6.1",
     "express": "^4.16.2",
+    "path": "^0.12.7",
     "sailthru-client": "^3.0.2"
   }
 }
